cdrkit (1.1.1) UNRELEASED; urgency=low

  * added geteltorito script from Rainer Krienke

  [ Eduard Bloch ]
  * more verbose abort message if track is specified with some maintainance
    command (#369677)
  * Added more DVD related fixes from SuSE's wodim-1.0pre5cvs-6.src.rpm
  * --devices option for wodim (modeled after cdrskin's output)
  * -msifile=... option to store -msinfo output reliably in a dedicated file
  * clear profile names printing (using code from libburnia)
  * cleanup with unused embedded CVS revision strings from Schilling and
    more gcc -Wall correctness
  * reenabled -format functionality (bug in program function control flow)
  * get maximum DMA buffer size from sysfs on Linux, where possible
  * enable BURN-Free by default where possible
  * genisoimage documentation updates, mkisofs name changes
  * setting argv[0] to wodim if someone is cheating and calls it as cdrecord.
    Avoids confusion and printing of the wrong app name in the help output.
  * more table formating fixes in icedax.1

  [ Thomas Schmidt ]
  * workaround for older libmagic API

  [ Peter Samuelson ]
  * expand where genisoimage looks for the config file - same places
    mkisofs looks plus a few more.  (We may wish to trim this back some.)
  * major cleanups to genisoimage.1 manpage; split out the part about
    .genisoimagerc to a new page genisoimagerc.5.

  [ Arkadiusz Miskiewicz ]
  * Fake prefix line in the version output of readom to keep compatibility
    with frontends

 -- Eduard Bloch <blade@debian.org>  Sat,  2 Dec 2006 23:05:33 +0100

cdrkit (1.1.0) RELEASED; urgency=medium

  [ Eduard Bloch ]
  * replacement of libdeflt, config parser rewrite; more user-friendly,
    more flexible/tolerant now
  * config overhaul, much more dynamic checks, including fixes for SunOS and
    AIX environment, including proper libiconv detection, and processing of
    LDFLAGS provided by user. Also fixed confusing double-checks for some of
    the variables in cdda2wav.c.