@@ -7,8 +7,8 @@ environment and tools set, available on:
 and many mirrors.
 
 To compile on Cygwin, execute setup.exe to install it. You will need to select
-cmake, make, gcc compiler in the package selection. Also choose subversion if
-you wish to fetch the latest development version.
+cmake, make, libiconv and gcc compiler in the package selection. Also choose
+subversion if you wish to fetch the latest development version.
 
 When done, you can start the Cygwin Shell by the new icon in the Start menu or
 on the desktop. Visit cdrkit.org and download a tarball of a recent version and store it under <cygwin_directory>\home\your_user_name.
